cmake_minimum_required (VERSION 3.8)

set(CURR_SOURCES 
	"TemplateParser.cpp"
	"SourceParser.cpp"
)

set(LLVM_CLANG_LIBS 
clangAnalysis.lib
clangApplyReplacements.lib
clangARCMigrate.lib
clangAST.lib
clangASTMatchers.lib
clangBasic.lib
clangChangeNamespace.lib
clangCodeGen.lib
clangCrossTU.lib
clangDaemon.lib
clangDoc.lib
clangDriver.lib
clangDynamicASTMatchers.lib
clangEdit.lib
clangFormat.lib
clangFrontend.lib
clangFrontendTool.lib
clangHandleCXX.lib
clangHandleLLVM.lib
clangIncludeFixer.lib
clangIncludeFixerPlugin.lib
clangIndex.lib
clangLex.lib
clangMove.lib
clangParse.lib
clangQuery.lib
clangReorderFields.lib
clangRewrite.lib
clangRewriteFrontend.lib
clangSema.lib
clangSerialization.lib
clangStaticAnalyzerCheckers.lib
clangStaticAnalyzerCore.lib
clangStaticAnalyzerFrontend.lib
clangTidy.lib
clangTidyAbseilModule.lib
clangTidyAndroidModule.lib
clangTidyBoostModule.lib
clangTidyBugproneModule.lib
clangTidyCERTModule.lib
clangTidyCppCoreGuidelinesModule.lib
clangTidyFuchsiaModule.lib
clangTidyGoogleModule.lib
clangTidyHICPPModule.lib
clangTidyLLVMModule.lib
clangTidyMiscModule.lib
clangTidyModernizeModule.lib
clangTidyMPIModule.lib
clangTidyObjCModule.lib
clangTidyPerformanceModule.lib
clangTidyPlugin.lib
clangTidyPortabilityModule.lib
clangTidyReadabilityModule.lib
clangTidyUtils.lib
clangTidyZirconModule.lib
clangTooling.lib
clangToolingASTDiff.lib
clangToolingCore.lib
clangToolingInclusions.lib
clangToolingRefactor.lib
findAllSymbols.lib
libclang.lib
liblldb.lib
lldbBase.lib
lldbBreakpoint.lib
lldbCommands.lib
lldbCore.lib
lldbDataFormatters.lib
lldbExpression.lib
lldbHost.lib
lldbInitialization.lib
lldbInterpreter.lib
lldbPluginABIMacOSX_arm.lib
lldbPluginABIMacOSX_arm64.lib
lldbPluginABIMacOSX_i386.lib
lldbPluginABISysV_arm.lib
lldbPluginABISysV_arm64.lib
lldbPluginABISysV_hexagon.lib
lldbPluginABISysV_i386.lib
lldbPluginABISysV_mips.lib
lldbPluginABISysV_mips64.lib
lldbPluginABISysV_ppc.lib
lldbPluginABISysV_ppc64.lib
lldbPluginABISysV_s390x.lib
lldbPluginABISysV_x86_64.lib
lldbPluginAppleObjCRuntime.lib
lldbPluginArchitectureArm.lib
lldbPluginArchitectureMips.lib
lldbPluginArchitecturePPC64.lib
lldbPluginClangCommon.lib
lldbPluginCPlusPlusLanguage.lib
lldbPluginCXXItaniumABI.lib
lldbPluginDisassemblerLLVM.lib
lldbPluginDynamicLoaderDarwinKernel.lib
lldbPluginDynamicLoaderHexagonDYLD.lib
lldbPluginDynamicLoaderMacOSXDYLD.lib
lldbPluginDynamicLoaderPosixDYLD.lib
lldbPluginDynamicLoaderStatic.lib
lldbPluginDynamicLoaderWindowsDYLD.lib
lldbPluginExpressionParserClang.lib
lldbPluginInstructionARM.lib
lldbPluginInstructionARM64.lib
lldbPluginInstructionMIPS.lib
lldbPluginInstructionMIPS64.lib
lldbPluginInstructionPPC64.lib
lldbPluginInstrumentationRuntimeASan.lib
lldbPluginInstrumentationRuntimeMainThreadChecker.lib
lldbPluginInstrumentationRuntimeTSan.lib
lldbPluginInstrumentationRuntimeUBSan.lib
lldbPluginJITLoaderGDB.lib
lldbPluginMemoryHistoryASan.lib
lldbPluginObjCLanguage.lib
lldbPluginObjCPlusPlusLanguage.lib
lldbPluginObjectContainerBSDArchive.lib
lldbPluginObjectContainerMachOArchive.lib
lldbPluginObjectFileBreakpad.lib
lldbPluginObjectFileELF.lib
lldbPluginObjectFileJIT.lib
lldbPluginObjectFileMachO.lib
lldbPluginObjectFilePECOFF.lib
lldbPluginOSPython.lib
lldbPluginPlatformAndroid.lib
lldbPluginPlatformFreeBSD.lib
lldbPluginPlatformGDB.lib
lldbPluginPlatformKalimba.lib
lldbPluginPlatformLinux.lib
lldbPluginPlatformMacOSX.lib
lldbPluginPlatformNetBSD.lib
lldbPluginPlatformOpenBSD.lib
lldbPluginPlatformPOSIX.lib
lldbPluginPlatformWindows.lib
lldbPluginProcessElfCore.lib
lldbPluginProcessGDBRemote.lib
lldbPluginProcessMachCore.lib
lldbPluginProcessMinidump.lib
lldbPluginProcessUtility.lib
lldbPluginProcessWindowsCommon.lib
lldbPluginRenderScriptRuntime.lib
lldbPluginScriptInterpreterNone.lib
lldbPluginStructuredDataDarwinLog.lib
lldbPluginSymbolFileBreakpad.lib
lldbPluginSymbolFileDWARF.lib
lldbPluginSymbolFileNativePDB.lib
lldbPluginSymbolFilePDB.lib
lldbPluginSymbolFileSymtab.lib
lldbPluginSymbolVendorELF.lib
lldbPluginSystemRuntimeMacOSX.lib
lldbPluginUnwindAssemblyInstEmulation.lib
lldbPluginUnwindAssemblyX86.lib
lldbSymbol.lib
lldbTarget.lib
lldbUtility.lib
lldbUtilityHelpers.lib
lldCOFF.lib
lldCommon.lib
lldCore.lib
lldDriver.lib
lldELF.lib
lldMachO.lib
lldMinGW.lib
lldReaderWriter.lib
lldWasm.lib
lldYAML.lib
LLVMAArch64AsmParser.lib
LLVMAArch64AsmPrinter.lib
LLVMAArch64CodeGen.lib
LLVMAArch64Desc.lib
LLVMAArch64Disassembler.lib
LLVMAArch64Info.lib
LLVMAArch64Utils.lib
LLVMAggressiveInstCombine.lib
LLVMAMDGPUAsmParser.lib
LLVMAMDGPUAsmPrinter.lib
LLVMAMDGPUCodeGen.lib
LLVMAMDGPUDesc.lib
LLVMAMDGPUDisassembler.lib
LLVMAMDGPUInfo.lib
LLVMAMDGPUUtils.lib
LLVMAnalysis.lib
LLVMARMAsmParser.lib
LLVMARMAsmPrinter.lib
LLVMARMCodeGen.lib
LLVMARMDesc.lib
LLVMARMDisassembler.lib
LLVMARMInfo.lib
LLVMARMUtils.lib
LLVMAsmParser.lib
LLVMAsmPrinter.lib
LLVMBinaryFormat.lib
LLVMBitReader.lib
LLVMBitWriter.lib
LLVMBPFAsmParser.lib
LLVMBPFAsmPrinter.lib
LLVMBPFCodeGen.lib
LLVMBPFDesc.lib
LLVMBPFDisassembler.lib
LLVMBPFInfo.lib
LLVMCodeGen.lib
LLVMCore.lib
LLVMCoroutines.lib
LLVMCoverage.lib
LLVMDebugInfoCodeView.lib
LLVMDebugInfoDWARF.lib
LLVMDebugInfoMSF.lib
LLVMDebugInfoPDB.lib
LLVMDemangle.lib
LLVMDlltoolDriver.lib
LLVMExecutionEngine.lib
LLVMFuzzMutate.lib
LLVMGlobalISel.lib
LLVMHexagonAsmParser.lib
LLVMHexagonCodeGen.lib
LLVMHexagonDesc.lib
LLVMHexagonDisassembler.lib
LLVMHexagonInfo.lib
LLVMInstCombine.lib
LLVMInstrumentation.lib
LLVMInterpreter.lib
LLVMipo.lib
LLVMIRReader.lib
LLVMLanaiAsmParser.lib
LLVMLanaiAsmPrinter.lib
LLVMLanaiCodeGen.lib
LLVMLanaiDesc.lib
LLVMLanaiDisassembler.lib
LLVMLanaiInfo.lib
LLVMLibDriver.lib
LLVMLineEditor.lib
LLVMLinker.lib
LLVMLTO.lib
LLVMMC.lib
LLVMMCA.lib
LLVMMCDisassembler.lib
LLVMMCJIT.lib
LLVMMCParser.lib
LLVMMipsAsmParser.lib
LLVMMipsAsmPrinter.lib
LLVMMipsCodeGen.lib
LLVMMipsDesc.lib
LLVMMipsDisassembler.lib
LLVMMipsInfo.lib
LLVMMIRParser.lib
LLVMMSP430AsmParser.lib
LLVMMSP430AsmPrinter.lib
LLVMMSP430CodeGen.lib
LLVMMSP430Desc.lib
LLVMMSP430Disassembler.lib
LLVMMSP430Info.lib
LLVMNVPTXAsmPrinter.lib
LLVMNVPTXCodeGen.lib
LLVMNVPTXDesc.lib
LLVMNVPTXInfo.lib
LLVMObjCARCOpts.lib
LLVMObject.lib
LLVMObjectYAML.lib
LLVMOption.lib
LLVMOptRemarks.lib
LLVMOrcJIT.lib
LLVMPasses.lib
LLVMPowerPCAsmParser.lib
LLVMPowerPCAsmPrinter.lib
LLVMPowerPCCodeGen.lib
LLVMPowerPCDesc.lib
LLVMPowerPCDisassembler.lib
LLVMPowerPCInfo.lib
LLVMProfileData.lib
LLVMRuntimeDyld.lib
LLVMScalarOpts.lib
LLVMSelectionDAG.lib
LLVMSparcAsmParser.lib
LLVMSparcAsmPrinter.lib
LLVMSparcCodeGen.lib
LLVMSparcDesc.lib
LLVMSparcDisassembler.lib
LLVMSparcInfo.lib
LLVMSupport.lib
LLVMSymbolize.lib
LLVMSystemZAsmParser.lib
LLVMSystemZAsmPrinter.lib
LLVMSystemZCodeGen.lib
LLVMSystemZDesc.lib
LLVMSystemZDisassembler.lib
LLVMSystemZInfo.lib
LLVMTableGen.lib
LLVMTarget.lib
LLVMTextAPI.lib
LLVMTransformUtils.lib
LLVMVectorize.lib
LLVMWebAssemblyAsmParser.lib
LLVMWebAssemblyAsmPrinter.lib
LLVMWebAssemblyCodeGen.lib
LLVMWebAssemblyDesc.lib
LLVMWebAssemblyDisassembler.lib
LLVMWebAssemblyInfo.lib
LLVMWindowsManifest.lib
LLVMX86AsmParser.lib
LLVMX86AsmPrinter.lib
LLVMX86CodeGen.lib
LLVMX86Desc.lib
LLVMX86Disassembler.lib
LLVMX86Info.lib
LLVMX86Utils.lib
LLVMXCoreAsmPrinter.lib
LLVMXCoreCodeGen.lib
LLVMXCoreDesc.lib
LLVMXCoreDisassembler.lib
LLVMXCoreInfo.lib
LLVMXRay.lib)

set(NATIVE_LIBS
Mincore.lib)

add_library(CKGSourceParser STATIC ${CURR_SOURCES})

target_include_directories(CKGSourceParser PUBLIC ${LLVM_INCLUDE_DIRS})

add_definitions(${LLVM_DEFINITIONS})
#target_compile_definitions(CKGSourceParser PUBLIC ${LLVM_DEFINITIONS})

# Manually set lib64 install path
target_link_directories(CKGSourceParser PUBLIC "D:\\LLVM(modified)\\install\\lib64")

target_link_libraries(CKGSourceParser CKGExprAST ${NATIVE_LIBS} ${LLVM_CLANG_LIBS})